@@ -28,7 +28,7 @@
 		<jackson.version>2.9.9</jackson.version>
 		<jackson-databind.version>2.9.10</jackson-databind.version>
 		<netty.version>4.1.34.Final</netty.version>
-		<tika.version>1.21</tika.version>
+		<tika.version>1.22</tika.version>
 		<aws.sdk.version>2.1.0</aws.sdk.version>
 	</properties>
 
