@@ -16,7 +16,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<imgscalr-lib.version>4.2</imgscalr-lib.version>
-		<tika.version>1.20</tika.version>
 		<twelvemonkeys.version>3.3.2</twelvemonkeys.version>
 	</properties>
 
